@@ -5,6 +5,7 @@ All notable changes to this project will be documented in this file.
 # Fixed
 - Fix unexpected NothingToDo on new build status in the case integration
   pull requests are not created
+- Fix comment in case of build failure on an integration branch
 
 ## [3.1.10] - 2018-04-17
 # Added
